<resources>
    <string name="app_name">Elecciones Cataluña 2015</string>
    <string name="action_settings">Preferencias</string>
    <string name="tab_noticias_titulo">Noticias</string>
    <string name="tab_quizs_titulo">Quizs</string>
    <string name="tab_escrutinio_titulo">Escrutinio</string>
    <string name="preferencias_titulo">Preferencias</string>
    <string name="idiomas">Idiomas</string>
    <string name="seleccion_idioma">Seleccione su idioma</string>
    <string name="introduce_tu_provincia">INTRODUCE TU PROVINCIA</string>
    <string name="recibir_notificaciones">¿Desea recibir notificaciones?</string>
    <string name="castellano">Castellano</string>
    <string name="catalan">Catalán</string>
    <string name="cambiar">Cambiar</string>
    <string name="creditos">Créditos</string>
    <string name="encuestas">QUIZS</string>
    <string name="politicos">POLÍTICOS</string>
    <string name="partidos">PARTIDOS</string>
    <string name="guardar">Guardar</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="suscripcion">Suscripción</string>
    <string name="suscripcion_descripcion">Usted recibirá notificaciones push cada vez que se publiquen artículos relacionados con las siguientes temáticas.</string>
    <string name="share">Compartir</string>
    <string name="cuenta_atras">Cuenta atrás</string>
    <string name="dias">días</string>
    <string name="empezar">EMPEZAR</string>
    <string name="titulo_resultados_2015">Resultados 2015</string>
    <string name="titulo_resultados_2012">Resultados 2012</string>
    <string name="titulo_evolucion">Evolución histórica</string>
    <string name="titulo_noticias">últimas noticias</string>
    <string name="titulo_fichas">Fichas informativas</string>
    <string name="titulo_encuesta">Participa: ¿A quién votarías en las Elecciones Catalanas de 2015?</string>
    <string name="alerta_conexion_noticias">Conéctese a Internet para recibir las últimas noticias sobre las Elecciones</string>
    <string name="alerta_espera_datos">Esperando datos del escrutinio...</string>
    <string name="alerta_conexion_quizes"><![CDATA[<p></p><p></p><p><strong>NO ES POSIBLE ACCEDER A LA ENCUESTA.</strong></p>
    <p>Para poder completar la encuesta necesita conexión a Internet. Por favor, revise su conexión e intentalo de nuevo.</p>]]></string>
    <string name="porcentaje_escrutado">% escrutado:</string>
    <string name="creditosAcerca">Créditos</string>
    <string name="acercaDe">Acerca de</string>
    <string name="titulo_creditos">Contribuidores</string>
    <string name="contenido_creditos">Esta aplicación ha sido desarrollada por: ElConfidencialLAB, en colaboración con:\n\n  Jorge Campos de la Mata \n  Antonio Fernández Llamas \n  Sergio Muñoz López \n  Jesús M. Sánchez Martínez \n  Angel Sans Muro </string>
    <string name="atras_creditos">Atrás</string>
    <string name="encuesta_ec">Encuesta El Confidencial</string>
    <string name="contacto">Contacto</string>
    <string name="encuestagracias">Gracias por participar. Puede consultar lo resultados en la sección de estadísticas</string>
    <string name="encuestaerror">Por favor, marque una casilla para participar en la encuesta</string>
    <string name="otros_partidos">Otros partidos</string>
    <string name="votar">Votar</string>
    <string name="ver_resultados">Ver resultados</string>
    <string name="quiz1">¿Cúanto sabes de política catalana?</string>
    <string name="quiz2">¿Cuánto sabes de Ciudadanos?</string>
    <string name="quiz3">¿Cuánto sabes de Junts Pel Sí?</string>
    <string name="quiz4">¿Cuánto sabes de Convergencia Democrática de Cataluña?</string>
    <string name="quiz5">¿Cuánto sabes de Catalunya Sí Que Es Pot?</string>
    <string name="barcelona">Barcelona</string>
    <string name="lerida">Lérida</string>
    <string name="gerona">Gerona</string>
    <string name="tarragona">Tarragona</string>
    <string name="alava">Álava</string>
    <string name="albacete">Albacete</string>
    <string name="alicante">Alicante</string>
    <string name="almeria">Almería</string>
    <string name="asturias">Asturias</string>
    <string name="avila">Ávila</string>
    <string name="badajoz">Badajoz</string>
    <string name="burgos">Burgos</string>
    <string name="caceres">Cáceres</string>
    <string name="cadiz">Cádiz</string>
    <string name="cantabria">Cantabria</string>
    <string name="castellon">Castellón</string>
    <string name="ciudad_real">Ciudad Real</string>
    <string name="cordoba">Córdoba</string>
    <string name="coruña">La Coruña</string>
    <string name="cuenca">Cuenca</string>
    <string name="granada">Granada</string>
    <string name="guadalajara">Guadalajara</string>
    <string name="guipuzcoa">Guipúzcoa</string>
    <string name="huelva">Huelva</string>
    <string name="baleares">Islas Baleares</string>
    <string name="jaen">Jaén</string>
    <string name="leon">León</string>
    <string name="lugo">Lugo</string>
    <string name="madrid">Madrid</string>
    <string name="malaga">Málaga</string>
    <string name="murcia">Murcia</string>
    <string name="navarra">Navarra</string>
    <string name="orense">Orense</string>
    <string name="huesca">Huesca</string>
    <string name="palencia">Palencia</string>
    <string name="laspalmas">Las Palmas</string>
    <string name="pontevedra">Pontevedra</string>
    <string name="larioja">La Rioja</string>
    <string name="salamanca">Salamanca</string>
    <string name="segovia">Segovia</string>
    <string name="sevilla">Sevilla</string>
    <string name="soria">Soria</string>
    <string name="tenerife">Tenerife</string>
    <string name="teruel">Teruel</string>
    <string name="toledo">Toledo</string>
    <string name="valencia">Valencia</string>
    <string name="valladolid">Valladolid</string>
    <string name="vizcaya">Vizcaya</string>
    <string name="zamora">Zamora</string>
    <string name="zaragoza">Zaragoza</string>
    <string name="error_provincia">Por favor, introduzca su provincia</string>
    <string name="welcome_string">ELECCIONES CATALUÑA 2015</string>
    <string name="autor_quiz">El Confidencial</string>
    <string name="artur_mas_nombre">Artur Mas</string>
    <string name="artur_mas_edad">59 años</string>
    <string name="artur_mas_partido">Convergència Democràtica de Catalunya (CDC)</string>
    <string name="artur_mas_cargo">Presidente de la Generalidad de Cataluña</string>
    <string name="artur_mas_perfil"><Data><![CDATA[<p><strong>Artur Mas</strong>, heredero del "pactismo" de Jordi Pujol, se ha convertido hoy en el primer presidente catalán que convoca unas elecciones para intentar iniciar un proceso de secesión de España bajo las siglas de una nueva formación (Junts pel Sí) que aglutina a gran parte del independentismo catalán.</p>

<p>El viejo timón que cuelga de su despacho en el Palau de la Generalitat, un regalo de su padre, se ha convertido en la metáfora de su particular "rumbo a Ítaca".</p>

<p>Nacido en Barcelona en 1956, Artur Mas i Gavarró, hijo político de Pujol -quien le designó sucesor- se convirtió en el primer presidente que retó al Estado con un referendo independentista en Cataluña, que finalmente reconvirtió en una consulta alternativa el 9N de 2014 por la que la Fiscalía le acusa de varios delitos, junto a dos consellers más.</p>

<p>Él se define como una persona discreta y trabajadora, que ni siquiera tenía previsto dedicarse a la política cuando se licenció en Ciencias Económicas y Empresariales.</p>

<p>Mas llegó a la Generalitat a principios de los ochenta de la mano del primer conseller de Comercio, Francesc Sanuy, que le puso en primera instancia en Fira de Barcelona, para luego saltar a director general en el Departamento de Industria.</p>

<p>Podría decirse que formaba parte de los que entonces se denominaban JASP, jóvenes aunque sobradamente preparados. Impecable en el vestir y cabellera siempre bien peinada que tapaba una marca de accidente de la infancia con una sartén hirviendo.</p>

<p>Pero el tiempo puso en primera línea a este dirigente políglota -habla inglés y francés-, padre de tres hijos y casado con Helena Rakosnik, tras llegar a ser primero conseller de Obras Públicas y luego titular del importante departamento de Economía.</p>

<p>En 2001 le llegó el gran trampolín: Pujol, que le hizo recitar las comarcas de Cataluña cuando lo fichó para Obras Públicas y le recomendó parar las obras de su cocina porque "le mirarían todo" cuando fuera conseller, lo eligió en detrimento de Josep Antoni Duran Lleida como conseller en cap y como su delfín para relevarlo.</p>

<p>Aprovechó el cargo como lanzadera electoral y llegó a coger hasta 14 vuelos en menos de una semana -incluido sobrevolar el Aconcagua en avioneta- para recabar apoyos entre las colonias de catalanes que viven en países sudamericanos.</p>

<p>Caricaturizado entonces por el actor Toni Albà como un robot en la televisión pública catalana, Mas se fue bregando poco a poco como líder en el particular oasis por el desierto que para él supuso los siete años del tripartito catalán (PSC, ERC e ICV-EUiA). Mas ganó las elecciones de 2003 y 2006, pero no pudo gobernar.</p>

<p>Paciente y astuto, lidió con todo aquel que cuestionó su liderazgo y supo esperar su turno como jefe de la oposición, una oportunidad que finalmente llegó en 2010, cuando ganó claramente las elecciones con 62 diputados -la mayoría absoluta está en 68 en el Parlament- y se coronó por fin President.</p>

<p>Se marcó entonces dos objetivos: el más acuciante, un nuevo sistema de financiación que denominó pacto fiscal y, más a largo plazo, el ejercicio del derecho a decidir. Es decir, concierto económico a la catalana y derecho de autodeterminación.
El órdago al Estado estaba servido y sus apoyos con socialistas y populares sólo duraron unos meses, muy influido por un entorno netamente independentista.</p>

<p>Su primera legislatura al frente de la Generalitat fue de sólo dos años (2010-2011), en la que persiguió un pacto fiscal para Cataluña que no convenció el presidente del Gobierno, Mariano Rajoy.</p>

<p>De ahí derivó el primer golpe de timón de Mas tras la masiva manifestación del 11 de Septiembre de 2012 y ya apostó decididamente por celebrar una consulta independentista anticipando elecciones.</p>

<p>Lo que no preveía Mas, ni tampoco las encuestas, es que CiU iba a perder 12 diputados en las urnas -se quedó con 50-, un batacazo del que se resarció pactando con una ERC que se hizo fuerte, mientras que CiU pagaba el precio de tener que gobernar solo.</p>

<p>Todo ello sirvió para generar un escenario político de gran tensión, aderezado con otras inclemencias como duros recortes sociales, casos de espionaje político, crisis social y económica, dificultades de tesorería en la Generalitat, batallas por el objetivo de déficit, el "caso Palau" o el fallido concurso de privatización de la empresa pública de agua.</p>

<p>Pero el más destacado revés, por su carga de profundidad, fue el "caso Pujol", la confesión de su padre político de que ocultó dinero en el extranjero.</p>

<p>Sin embargo, y haciendo gala de su autocalificada astucia, Mas supo, en un contexto de descenso en las encuestas de los partidos soberanistas, convencer a ERC de forjar una lista conjunta con representantes de las entidades independentistas y encabezado por un ex ICV, como Raül Romeva.</p>

<p>Con esta tripulación, y él de número 4, Mas ha dado hoy un nuevo paso en su particular "rumbo a Ítaca", haciendo suyo el metafórico viaje narrado por el poeta griego Constantino Cavafis.</p>]]> </Data>
</string>
    <string name="miquel_iceta_nombre">Miquel Iceta</string>
    <string name="miquel_iceta_edad">53 años</string>
    <string name="miquel_iceta_partido">Partido Socialista de Cataluña</string>
    <string name="miquel_iceta_cargo">Primer secretario del PSC</string>
</resources>