<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:scaleType="centerCrop"
        android:cropToPadding="true"
        android:adjustViewBounds="true"

        />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- ENCABEZADO -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/suscripcion"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textAllCaps="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginEnd="30dp"
                android:background="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="25dp"
                android:layout_marginStart="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginEnd="30dp"
                android:textColor="#9E9E9E"
                android:textSize="12sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/suscripcion_descripcion" />


        <!-- LISTA DE PARTIDOS CON SWITCHES -->
                <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="30dp"
                        android:textSize="13sp"
                        android:textColor="#212121"
                        android:text="PP" />
                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:id="@+id/switch_pp" />

                </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:background="#E0E0E0"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:textSize="13sp"
                android:textColor="#212121"
                android:text="PSOE" />
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/switch_psoe" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:background="#E0E0E0"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:textSize="13sp"
                android:textColor="#212121"
                android:text="CIUDADANOS" />
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/switch_ciudadanos" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:background="#E0E0E0"/>





        <!-- SELECCION DE IDIOMA -->


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginStart="30dp"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/idiomas"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textAllCaps="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginEnd="30dp"
                android:background="@color/black"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/seleccion_idioma"
                android:id="@+id/idiomaButton"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                style="?android:attr/borderlessButtonStyle"
                />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="GUARDAR"
            android:id="@+id/guardar"
            android:cropToPadding="true"
            android:adjustViewBounds="true" />




    </LinearLayout>

</ScrollView>



</LinearLayout>
